deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
  namespace: blog
spec:
  tls:
  - hosts:
    - www.i9t.top
    secretName: nginx-secret
  rules:
    - host: www.i9t.top
      http:
        paths:
        - path: /
          backend:
            serviceName: blog
            servicePort: 80
        - path: /golang
          backend:
            serviceName: gitbook
            servicePort: 80
        - path: /k8s
          backend:
            serviceName: gitbook-k8s
            servicePort: 80
        - path: /game
          backend:
            serviceName: game
            servicePort: 80
    - host: i9t.top
      http:
        paths:
        - path: /
          backend:
            serviceName: blog
            servicePort: 80
        - path: /golang
          backend:
            serviceName: gitbook
            servicePort: 80
        - path: /k8s
          backend:
            serviceName: gitbook-k8s
            servicePort: 80
        - path: /game
          backend:
            serviceName: game
            servicePort: 80
#  backend:
#    serviceName: blog
#    servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: blog
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
  selector:
    app: blog
  sessionAffinity: ClientIP
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: blog
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: blog
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: blog
    spec:
      imagePullSecrets:
        - name: github
      containers:
        - image: wzj751127122/blog:{TAG}
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 2
          name: blog
          ports:
            - containerPort: 80
              name: 80tcp02
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 2
            timeoutSeconds: 2
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities: {}
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          stdin: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
          volumeMounts:
            - mountPath: /usr/share/nginx/html/db.json
              name: db
            - mountPath: /etc/nginx/ssl
              name: secret-volume
            - mountPath: /etc/nginx/conf.d
              name: configmap-volume
      dnsConfig: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - hostPath:
            path: /data/db.json
            type: "FileOrCreate"
          name: db
        - hostPath:
            path: /data/Thumbs.json
            type: "FileOrCreate"
          name: thumbs
        - name: secret-volume
          secret:
            defaultMode: 420
            secretName: nginx-secret
        - configMap:
            defaultMode: 420
            name: nginx-conf
          name: configmap-volume
